update fr l10nn

--- a/src/main/resources/salesforce-querysobjects_en.properties
+++ b/src/main/resources/salesforce-querysobjects_en.properties
@@ -2,7 +2,7 @@
 #Category
 Salesforce.category=Salesforce (partner 24.0)
 #Connector meta data
-connectorDefinitionLabel=Query Object
+connectorDefinitionLabel=Query Objects
 connectorDefinitionDescription=Execute a query on Salesforce objects (partner 24.0)
 
 #Connection configuration page
