--- a/src/main/resources/salesforce-querysobjects_fr.properties
+++ b/src/main/resources/salesforce-querysobjects_fr.properties
@@ -2,7 +2,7 @@
 #Category
 Salesforce.category=Salesforce
 #Connector meta data
-connectorDefinitionLabel=Objet de la requ\u00eate
+connectorDefinitionLabel=Requ\u00eater des objets
 connectorDefinitionDescription=Ex\u00e9cuter une requ\u00eate sur des objets Salesforce (partner 24.0)
 
 #Connection configuration page
