--- a/src/main/resources/salesforce-retrievesobjects_fr.properties
+++ b/src/main/resources/salesforce-retrievesobjects_fr.properties
@@ -2,7 +2,7 @@
 #Category
 Salesforce.category=Salesforce
 #Connector meta data
-connectorDefinitionLabel=R\u00e9cup\u00e9rer l'objet
+connectorDefinitionLabel=R\u00e9cup\u00e9rer des objets
 connectorDefinitionDescription=Retrouver des objets Salesforce (partner 24.0)
 
 #Connection configuration page
