--- a/src/main/resources/salesforce-updatesobject_fr.properties
+++ b/src/main/resources/salesforce-updatesobject_fr.properties
@@ -2,7 +2,7 @@
 #Category
 Salesforce.category=Salesforce
 #Connector meta data
-connectorDefinitionLabel=Mettre \u00e0 jour l'objet
+connectorDefinitionLabel=Mettre \u00e0 jour un objet
 connectorDefinitionDescription=Mettre \u00e0 jour un objet Salesforce (partner 24.0)
 
 #Connection configuration page
@@ -37,7 +37,7 @@ readTimeout.label=Timeout de lecture
 Parameters.pageTitle=Param\u00e8tres de l'objet \u00e0 mettre \u00e0 jour
 Parameters.pageDescription=Renseignez les champs requis.
 sObjectType.label=Type d'objet
-sObjectType.description=ex \: Compte, Contact... S'il s'agit d'un object personnalis\u00e9 n'oubliez pas le suffixe __c
+sObjectType.description=ex \: Compte, Contact... S'il s'agit d'un object personnalis\u00e9 n'oubliez pas le suffixe '__c'
 sObjectId.label=Identifiant de l'objet
 sObjectId.description=Identifiants des objets \u00e0 mettre \u00e0 jour
 fieldValues.label=Attributs de l'objets
