--- a/src/main/resources/salesforce-deletesobjects_fr.properties
+++ b/src/main/resources/salesforce-deletesobjects_fr.properties
@@ -2,7 +2,7 @@
 #Category
 Salesforce.category=Salesforce
 #Connector meta data
-connectorDefinitionLabel=Supprimer l'objet
+connectorDefinitionLabel=Supprimer des objets
 connectorDefinitionDescription=Supprimer des objets Salesforce (partner 24.0)
 
 #Connection configuration page
